--- a/style.css
+++ b/style.css
@@ -87,8 +87,8 @@ body {
     color: var(--danger-color);
 }
 .assessment-form__submit-box .danger-icon {
-    width: 25px;
-    height: 25px;
+    min-width: 25px;
+    min-height: 25px;
     border-radius: 100px;
     background-color: var(--danger-color);
     display: flex;
@@ -148,4 +148,30 @@ body {
     height: 100%;
     position: absolute;
     background-color: transparent;
+}
+
+@media screen and (max-width: 510px) {
+    #assessment-form {
+margin: 10px;
+    }
+    .assessment-form__submit-box {
+        flex-wrap: wrap;
+    }
+    .assessment-form__submit-box>div {
+        width: 100%;
+        order: 2;
+    }
+    .assessment-form__submit-box button {
+        width: 100%;
+        order: 1;
+        margin-bottom: 10px;
+    }
+
+    #section-form {
+        height: auto;
+    }
+
+    .star-data {
+        font-size: 12px;
+    }
 }
